@@ -1,3 +1,8 @@
+1999-03-06  Mark Kettenis  <kettenis@gnu.org>
+
+	* notify.c (do_mach_notify_dead_name): Deallocate reference to
+	DEADPORT.
+
 Sat Feb 20 06:26:17 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* stubs.c (send_signal): Typo in comment.
